--- a/playbooks/provision-k8s-node.yml
+++ b/playbooks/provision-k8s-node.yml
@@ -1,14 +1,23 @@
-- name: 'Provision k8s master node'
+- name: 'Provision k8s node'
   hosts: localhost
   become: true
 
   tasks:
-    - name: Install containerd
-      apt:
-        name: containerd
+  # install packages
+    ## setup docker repository
+    - name: Add Docker GPG key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
         state: present
-      tags: [ system ]
+      tags: [ docker ]
 
+    - name: Add the Docker repository
+      apt_repository:
+        repo: 'deb https://download.docker.com/linux/ubuntu jammy stable'
+        state: present
+      tags: [ docker ]
+
+    ## setup kubernetes repository
     - name: Add GPG key
       apt_key:
         url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
@@ -25,10 +34,12 @@
       apt:
         update_cache: yes
       tags: [ system ]
-    
-    - name: Install kubernetes Packages
+
+    ## install packages
+    - name: Install Packages
       apt:
         pkg:
+          - containerd
           - kubelet
           - kubeadm
           - kubectl
@@ -43,76 +54,88 @@
         - kubelet
         - kubeadm
         - kubectl
-      tags: [system]
+      tags: [ system ]
 
-    - name: Disable swap memory
+  # disable swap
+    - name: Disable swap
       command: swapoff -a
+      tags: [ system ]
+    
+    - name: Disable swap in /etc/fstab
+      lineinfile:
+        dest: /etc/fstab
+        regexp: '^/swap.img.*swap'
+        line: '# &'
+      tags: [ system ]
 
-  # # Configure containerd
-    - name: Load overlay module
-      command: modprobe overlay
+  # Configure containerd
+    - name: Create /etc/modules-load.d/k8s.conf if it does not exist
+      file:
+        path: /etc/modules-load.d/k8s.conf
+        state: touch
+      tags: [ containerd ]
 
-    - name: Load br_netfilter module
-      command: modprobe br_netfilter
-
-    - name: Add containerd modules to /etc/modules-load.d/containerd.conf
-      ini_file:
-        path: /etc/modules-load.d/containerd.conf
-        section: containerd
-        option: modules
-        value: |
+    - name: Add containerd modules to /etc/modules-load.d/k8s.conf
+      lineinfile:
+        path: /etc/modules-load.d/k8s.conf
+        line: |
           overlay
           br_netfilter
-        create: yes
+        state: present
+      tags: [ containerd ]
+
+    - name: Load overlay module
+      command: | 
+        modprobe overlay
+        modprobe br_netfilter
+      tags: [ containerd ]
+
+    - name: Create /etc/sysctl.d/k8s.conf if it does not exist
+      file:
+        path: /etc/sysctl.d/k8s.conf
+        state: touch
+      tags: [ containerd ]
 
     - name: Set sysctl options for Kubernetes CRI
-      ini_file:
-        path: /etc/sysctl.d/99-kubernetes-cri.conf
-        section: kubernetes_cri
-        option: net.bridge.bridge-nf-call-iptables
-        value: 1
-        create: yes
-
-    - name: Set sysctl options for Kubernetes CRI
-      ini_file:
-        path: /etc/sysctl.d/99-kubernetes-cri.conf
-        section: kubernetes_cri
-        option: net.ipv4.ip_forward
-        value: 1
-        create: yes
-
-    - name: Set sysctl options for Kubernetes CRI
-      ini_file:
-        path: /etc/sysctl.d/99-kubernetes-cri.conf
-        section: kubernetes_cri
-        option: net.bridge.bridge-nf-call-ip6tables
-        value: 1
-        create: yes
+      lineinfile:
+        dest: /etc/sysctl.d/k8s.conf
+        line: |
+          net.bridge.bridge-nf-call-iptables  = 1
+          net.bridge.bridge-nf-call-ip6tables = 1
+          net.ipv4.ip_forward                 = 1
+        state: present
+      tags: [ containerd ]
 
     - name: Apply sysctl params without reboot
       command: sysctl --system
+      tags: [ containerd ]
 
     - name: Create a containerd configuration directory
       file:
         path: /etc/containerd
         state: directory
+      tags: [ containerd ]
 
     - name: Create a containerd configuration file
       command: containerd config default
       register: containerd_config
+      tags: [ containerd ]
 
     - name: Write containerd config to file
       copy:
         content: "{{ containerd_config.stdout }}"
         dest: /etc/containerd/config.toml
+      tags: [ containerd ]
 
     - name: Enable SystemdCgroup in containerd config
       replace:
         path: /etc/containerd/config.toml
         regexp: '^            SystemdCgroup = false$'
         replace: '            SystemdCgroup = true'
+      tags: [ containerd ]
 
     - name: Restart containerd service
       service:
         name: containerd
         state: restarted
+      tags: [ containerd ]
