fix containerd version (kubeadm init working)

--- a/playbooks/provision-k8s-node.yml
+++ b/playbooks/provision-k8s-node.yml
@@ -39,7 +39,7 @@
     - name: Install Packages
       apt:
         pkg:
-          - containerd
+          - containerd.io
           - kubelet
           - kubeadm
           - kubectl
